tweaks to benchmarking